--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "software-developers",
   "version": "1.0.0",
-  "description": "",
+  "description": "Software Developer Spatial Concentration in California",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Maria Renee Horn & Joe Blankenship",
   "license": "ISC"
 }
