created bindData.js to create counts field for districts, output json created

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "chalk": "^2.4.1",
     "csv2geojson": "^5.0.2",
-    "less": "^3.0.2"
+    "less": "^3.0.2",
+    "mapshaper": "^0.4.70"
   }
 }
